Fixed too long thread type.

--- a/themes/chan/css/mobile.css
+++ b/themes/chan/css/mobile.css
@@ -92,7 +92,7 @@ a.fileLink{font-size:8pt;}
 }
 #postType.locked::after{content:"LOCKED";}
 #postType.sticky::after{content:"STICKY";}
-#postType.stickylocked::after{content:"ANNOUNCEMENT";}
+#postType.stickylocked::after{content:"INFO";}
 #postType.redirect::after{content:"REDIRECT";}
 
 .buttons{
