--- a/themes/chan/css/slim.css
+++ b/themes/chan/css/slim.css
@@ -249,7 +249,7 @@ a.directQuote{
     background: -o-linear-gradient(left, rgba(0,255,0,0) 0%, rgba(0,255,0,1) 100%);
     background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,255,0,0)), color-stop(100%,rgba(0,255,0,1)));}
 #postType.stickylocked::after{
-    content:"ANNOUNCEMENT";
+    content:"INFO";
     background: -moz-linear-gradient(left, rgba(0,0,255,0) 0%, rgba(0,0,255,1) 100%);
     background: -ms-linear-gradient(left, rgba(0,0,255,0) 0%, rgba(0,0,255,1) 100%);
     background: -o-linear-gradient(left, rgba(0,0,255,0) 0%, rgba(0,0,255,1) 100%);
